Fixed Hamburger btn not going to shop.html from index.html. Cleaning up code a bit with a bunch of small fixes, Adjusted footer grid to fit tabs in more proper.  Sidebar links need fixin on mobile view they dont go to correct spot on the carousel when its stopped in moblieview

--- a/css/product.css
+++ b/css/product.css
@@ -57,8 +57,7 @@ body {
     align-items: center;
 }
 #page_title {
-    font-size: 22px;
-    
+    font-size: 26px;
     text-shadow: 1px 1px 2px #7dabd2;
     margin-left: 10px;
 }
