--- a/css/styles.css
+++ b/css/styles.css
@@ -701,7 +701,7 @@ figcaption {
 .footer {
   display: grid;
   grid-template-columns: 1fr; /* One column */
-  grid-template-rows: repeat(5, 40px); /* Four 40px rows */
+  grid-template-rows: repeat(7, 40px); /* Four 40px rows */
   width: 100%; /* Full width of parent */
   height: 100%;
   font-size: 12px;
